# khiopsdriver-gcs

./: CMakeCache.txt  CMakeLists.txt
.github/workflows/: hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml
test/: CMakeCache.txt  basic_test.cpp
